# AI_DEVS

./: .env-exapmle  .gitignore  Dockerfile  docker-compose.yml
AI_devs/: pyproject.toml
AI_devs/ai_devs/: docker-entrypoint.sh  main.py
AI_devs/ai_devs/PROPMPTS/: naprawa.txt
AI_devs/ai_devs/config/: config.py  log_conf.py
AI_devs/ai_devs/db/: database.py
AI_devs/ai_devs/models/: people.py
AI_devs/ai_devs/schemas/: question.py
AI_devs/ai_devs/tasks/: data.jsonl  embedding .py  functions.py  gnome.py  google.py  inprompt.py  knowledge.py  liar.py  main.py  md2html.py  meme.py  optimaldb.py  ownapi.py  people.py  rodo.py  scraper.py  search.py  tools-2.py  tools.py  tuning.py  whisper.py  whoami.py
AI_devs/ai_devs/utils/: AIDevs.py  OpenAiAPI.py  Search.py
